ios scrollbar fix

--- a/dash-v2-sidebar-and-submenu-merged/assets/css/dashboard-style.css
+++ b/dash-v2-sidebar-and-submenu-merged/assets/css/dashboard-style.css
@@ -20,6 +20,7 @@ html {
 }
 
 ::-webkit-scrollbar {
+  display: none;
   width: 0;
   height: 0
 }
